--- a/source/index.html
+++ b/source/index.html
@@ -74,7 +74,7 @@
   <main>
     <h1 class="visually-hidden">Monoteka - интернет магазин женской одежды.</h1>
     <section class="promo">
-      <div class="slider" data-width="true">
+      <div class="slider">
         <ul class="slider__list">
           <li class="slider__item">
             <picture>
@@ -653,5 +653,6 @@
 
   <script src="js/menu.min.js"></script>
   <script src="js/slider.min.js"></script>
+  <script src="js/card-slider.min.js"></script>
 </body>
 </html>
