--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Yanone+Kaffeesatz:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Yanone+Kaffeesatz:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.min.css">
   <title>InSales</title>
 </head>
+
 <body>
 
   <div style="display:none">
@@ -26,7 +30,7 @@
           <span class="main-nav__close-btn"></span>
         </button>
       </div>
-      
+
       <ul class="main-nav__list main-nav__list--about">
         <li class="main-nav__item">
           <button class="main-nav__btn">Каталог</button>
@@ -114,7 +118,7 @@
         </div>
 
         <div class="slider__inner">
-          <p class="slider__slogan">Monoteka-group — лучшие моменты  жизни вместе с&#160;нашими платьями</p>
+          <p class="slider__slogan">Monoteka-group — лучшие моменты жизни вместе с&#160;нашими платьями</p>
           <button class="slider__btn">Купить</button>
         </div>
       </div>
@@ -272,7 +276,7 @@
 
               <div class="cards__overlay"></div>
             </div>
-  
+
             <div class="cards__description">
               <h3 class="cards__title">Кожаная юбка</h3>
               <p class="cards__text">Описание: Полосатая кофта из&#160;полосатого трикотажа, без&#160;молнии</p>
@@ -294,7 +298,7 @@
                   </br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -306,7 +310,7 @@
               </div>
             </div>
           </li>
-  
+
           <li class="cards__item" tabindex="24">
             <div class="cards__wrapper">
               <picture>
@@ -345,7 +349,7 @@
 
               <div class="cards__overlay"></div>
             </div>
-    
+
             <div class="cards__description">
               <h3 class="cards__title">Платье в горох с&#160;поясом</h3>
               <p class="cards__text">Описание: Полосатая кофта из&#160;полосатого трикотажа, без&#160;молнии</p>
@@ -367,7 +371,7 @@
                   </br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price cards__price--discount">1990&#160;p.</span>
                   </br>
@@ -381,7 +385,7 @@
               </div>
             </div>
           </li>
-  
+
           <li class="cards__item" tabindex="24">
             <div class="cards__wrapper">
               <picture>
@@ -434,7 +438,7 @@
                   </br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -446,7 +450,7 @@
               </div>
             </div>
           </li>
-  
+
           <li class="cards__item" tabindex="24">
             <div class="cards__wrapper">
               <picture>
@@ -499,7 +503,7 @@
                   </br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -564,7 +568,7 @@
                   </br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">990&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -633,7 +637,7 @@
                   </br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">1790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -651,8 +655,7 @@
     </section>
   </main>
 
-  <script src="js/menu.min.js"></script>
-  <script src="js/slider.min.js"></script>
-  <script src="js/card-slider.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
+
 </html>
