--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Yanone+Kaffeesatz:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.min.css">
   <title>InSales</title>
 </head>
+
 <body>
 
   <div style="display:none">
@@ -253,7 +255,7 @@
           <span class="main-nav__close-btn"></span>
         </button>
       </div>
-      
+
       <ul class="main-nav__list main-nav__list--about">
         <li class="main-nav__item">
           <button class="main-nav__btn">Каталог</button>
@@ -341,7 +343,7 @@
         </div>
 
         <div class="slider__inner">
-          <p class="slider__slogan">Monoteka-group — лучшие моменты  жизни вместе с&#160;нашими платьями</p>
+          <p class="slider__slogan">Monoteka-group — лучшие моменты жизни вместе с&#160;нашими платьями</p>
           <button class="slider__btn">Купить</button>
         </div>
       </div>
@@ -499,7 +501,7 @@
 
               <div class="cards__overlay"></div>
             </div>
-  
+
             <div class="cards__description">
               <h3 class="cards__title">Кожаная юбка</h3>
               <p class="cards__text">Описание: Полосатая кофта из&#160;полосатого трикотажа, без&#160;молнии</p>
@@ -521,7 +523,7 @@
                   <br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -533,7 +535,7 @@
               </div>
             </div>
           </li>
-  
+
           <li class="cards__item" tabindex="24">
             <div class="cards__wrapper">
               <picture>
@@ -572,7 +574,7 @@
 
               <div class="cards__overlay"></div>
             </div>
-    
+
             <div class="cards__description">
               <h3 class="cards__title">Платье в горох с&#160;поясом</h3>
               <p class="cards__text">Описание: Полосатая кофта из&#160;полосатого трикотажа, без&#160;молнии</p>
@@ -594,7 +596,7 @@
                   <br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price cards__price--discount">1990&#160;p.</span>
                   <br>
@@ -608,7 +610,7 @@
               </div>
             </div>
           </li>
-  
+
           <li class="cards__item" tabindex="24">
             <div class="cards__wrapper">
               <picture>
@@ -661,7 +663,7 @@
                   <br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -673,7 +675,7 @@
               </div>
             </div>
           </li>
-  
+
           <li class="cards__item" tabindex="24">
             <div class="cards__wrapper">
               <picture>
@@ -726,7 +728,7 @@
                   <br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -791,7 +793,7 @@
                   <br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">990&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -860,7 +862,7 @@
                   <br>
                   <p class="cards__size-text">Размер</p>
                 </div>
-  
+
                 <div class="cards__prices">
                   <span class="cards__price">1790&#160;p.</span>
                   <a class="cards__basket" href="#" tabindex="24">
@@ -878,8 +880,7 @@
     </section>
   </main>
 
-  <script src="js/menu.min.js"></script>
-  <script src="js/slider.min.js"></script>
-  <script src="js/card-slider.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
+
 </html>
